--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
             <img src="Imagem1.jpg" alt="Imagem 1" class="imagem-destaque">
         </div>
 
-        <div class="bloco-destaque">
+        <div class="bloco-destaque invertido">
+        <img src="Imagem2.jpg" alt="Imagem 2" class="imagem-destaque">
             <p class="texto-destaque">
-                Além disso, o equilíbrio entre vida pessoal e profissional, boas relações interpessoais e um ambiente saudável 
-                contribuem significativamente para a melhora da qualidade de vida. Cuidar do corpo e da mente deve ser uma prioridade 
-                para que possamos viver com mais disposição, felicidade e longevidade.
+            Outro fator importante para a qualidade de vida é o ambiente em que vivemos e trabalhamos. 
+            Um local limpo, seguro e com acesso a serviços básicos melhora significativamente o bem-estar. 
+            Além disso, equilíbrio entre vida pessoal e profissional é fundamental para evitar o estresse crônico.
+            Investir em saúde mental, como praticar meditação ou buscar apoio psicológico, também contribui muito. 
+            Com pequenas mudanças diárias, é possível alcançar uma vida mais saudável e equilibrada.
             </p>
-            <img src="Imagem2.jpg" alt="Imagem 2" class="imagem-destaque">
         </div>
     </div>
 </body>
